load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "test/t1",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "t1",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
