load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["help.go"],
    importpath = "gitlab.ushaqi.com/zhuishu-micro-svc/reborn/library/mq/help",
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    srcs = ["help_test.go"],
    embed = [":go_default_library"],
)
