load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "test/t2",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "t2",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
